fix: adjust list spacing

--- a/src/less/___list.less
+++ b/src/less/___list.less
@@ -4,11 +4,11 @@
 }
 
 .list__item {
-  margin: 2rem 0 0;
+  margin: 1.75rem 0 0;
 }
 
 .list__item:first-child {
-  margin: 3rem 0;
+  margin: 2.5rem 0;
 }
 
 .list__item--info {
